# scintilla

./: CMakeLists.txt
qt/: CMakeLists.txt
qt/ScintillaEdit/: CMakeLists.txt  WidgetGen.py
qt/ScintillaEditBase/: PlatQt.cpp  ScintillaEditBase.cpp
